--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@react-native-community/slider": "4.5.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~51.0.22",
+    "expo": "~51.0.24",
     "expo-clipboard": "~6.0.3",
     "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.9",
     "expo-haptics": "~13.0.1",
+    "expo-intent-launcher": "~11.0.1",
     "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
     "expo-media-library": "~16.0.4",
     "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
@@ -33,13 +36,13 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
+    "react-native-svg": "15.2.0",
     "react-native-syntax-highlighter": "^2.1.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-view-shot": "^3.8.0",
     "react-native-web": "~0.19.10",
     "react-syntax-highlighter": "^15.5.0",
-    "recharts": "^2.13.0-alpha.4",
-    "expo-font": "~12.0.9"
+    "recharts": "^2.13.0-alpha.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
