--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -42,7 +42,8 @@
     "react-native-view-shot": "^3.8.0",
     "react-native-web": "~0.19.10",
     "react-syntax-highlighter": "^15.5.0",
-    "recharts": "^2.13.0-alpha.4"
+    "recharts": "^2.13.0-alpha.4",
+    "expo-system-ui": "~3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
